Configuraciones de transformaciones para caso estudio

--- a/transformacionjsonxml/src/main/resources/bootstrap.yml
+++ b/transformacionjsonxml/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ eureka:
     register-with-eureka: true  
 spring:
   application:
-    name: transformacion1
+    name: transformacionjsonxml
   cloud:
     config:
       fail-fast: false    
