--- a/transformacionxmljson/src/main/resources/bootstrap.yml
+++ b/transformacionxmljson/src/main/resources/bootstrap.yml
@@ -7,7 +7,7 @@ eureka:
     register-with-eureka: true  
 spring:
   application:
-    name: transformacion2
+    name: transformacionxmljson
   cloud:
     config:
       fail-fast: false    
