--- a/clienteFinalSOAP/pom.xml
+++ b/clienteFinalSOAP/pom.xml
@@ -44,6 +44,22 @@
 	      <groupId>wsdl4j</groupId>
 	      <artifactId>wsdl4j</artifactId>
 	    </dependency>
+	    <!-- spring-security -->
+	    <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.0.1.RELEASE</version>
+        </dependency>
+        <dependency>
+	        <groupId>org.springframework.security</groupId>
+	        <artifactId>spring-security-web</artifactId>
+	        <version>4.0.1.RELEASE</version>
+	    </dependency>
+		<dependency>
+		    <groupId>org.springframework.security</groupId>
+		    <artifactId>spring-security-config</artifactId>
+		    <version>4.0.1.RELEASE</version>
+		</dependency> 
 	</dependencies>
 
 	<build>
