Agregar sleuth a los CI

--- a/conectorEntradaDI/pom.xml
+++ b/conectorEntradaDI/pom.xml
@@ -86,17 +86,11 @@
             <groupId>org.springframework.integration</groupId>
             <artifactId>spring-integration-http</artifactId>
         </dependency>
-<!--         <dependency> -->
-<!-- 		    <groupId>org.json</groupId> -->
-<!-- 		    <artifactId>json</artifactId> -->
-<!-- 		    <version>20180813</version> -->
-<!-- 		</dependency> -->
-<!-- 		<dependency> -->
-<!-- 	         <groupId>com.proyectogrado.pi</groupId> -->
-<!-- 	         <artifactId>utils</artifactId> -->
-<!-- 	         <version>${project.version}</version> -->
-<!-- 	         <scope>compile</scope> -->
-<!--       	</dependency> -->
+		<!-- Sleuth -->
+     	<dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-starter-sleuth</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<dependencyManagement>
