--- a/orquestador/pom.xml
+++ b/orquestador/pom.xml
@@ -84,6 +84,11 @@
 	         <version>${project.version}</version>
 	         <scope>compile</scope>
       	</dependency>
+      	<!-- Sleuth -->
+     	<dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-starter-sleuth</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<dependencyManagement>
