--- a/transformacionxmljson/pom.xml
+++ b/transformacionxmljson/pom.xml
@@ -91,11 +91,16 @@
 	         <version>${project.version}</version>
 	         <scope>compile</scope>
       	</dependency>
-      	<dependency>
+      	<!-- <dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
 			<artifactId>jackson-dataformat-xml</artifactId>
 			<version>2.9.8</version>
-		</dependency>
+		</dependency> -->
+		<!-- Sleuth -->
+     	<dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-starter-sleuth</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<dependencyManagement>
